jar 빌드 정리